whoami/whoami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  strategy: {}
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami
        imagePullPolicy: ""
        name: whoami
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
